<resources>
	<string name="app_name">MTG Familiar</string>
    <string name="name_search_hint">Search Names</string>
    <string name="slash">/</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_done">Done</string>
    <string name="dialog_both">Both</string>
    <string name="dialog_life">Life</string>
    <string name="dialog_thanks">Thanks!</string>
    <string name="dialog_thanks_anyway">Thanks Anyway!</string>
    <string name="dialog_enjoy">Enjoy!</string>
    <string name="dialog_play">Let\'s Play!</string>
    <string name="dialog_save">Save</string>
    <string name="update_notification">Checking for database updates</string>
    <string name="update_updating_set">Adding %s…</string>
    <string name="update_updating_rules">Updating comprehensive rules…</string>
    <string name="update_added">Added</string>
    <string name="update_added_rules">new comprehensive rules</string>
    <string name="update_parse_cards">Parsing %s</string>
    <string name="update_parse_rules">Parsing comprehensive rules</string>
    <string name="error">Error</string>
    <string name="error_database">A database error occurred. If it persists, try clearing the app data from the Android settings menu.</string>
    <string name="error_corruption">Whoops! It looks like an important part of this app has been corrupted and doesn\'t work anymore.
        We\'re trying to figure out exactly what\'s causing this to happen, so please send us an email at 
        &lt;a href="mailto:mtg.familiar@gmail.com">mtg.familiar@gmail.com&lt;/a> so we can track this bug and fix it.
        In the meantime, if it doesn\'t manage to fix itself, please try clearing the app data in your device\'s settings,
        and if that doesn\'t work reinstall the app from the Play Store.</string>
    <string name="error_no_email_client">It does not appear that you have an active email client installed. Please configure an email application.</string>
    <string name="ph_type">Type</string>
    <string name="ph_cost">Cost</string>
    <string name="ph_ability">Ability</string>
    <string name="ph_power">P</string>
    <string name="ph_toughness">T</string>
    <string name="main_pages">PAGES</string>
    <string name="main_extras">EXTRAS</string>
    <string name="main_card_search">Card Search</string>
    <string name="main_life_counter">Life Counter</string>
    <string name="main_mana_pool">Mana Pool</string>
    <string name="main_dice">Dice</string>
    <string name="main_trade">Trade Cards</string>
	<string name="main_wishlist">Wishlist</string>
    <string name="main_timer">Round Timer</string>
    <string name="main_rules">Rules</string>
    <string name="main_judges_corner">Judge\'s Corner</string>
    <string name="main_mojhosto">MoJhoSto Basic</string>
    <string name="main_force_update_title">Force Update</string>
    <string name="main_settings_title">Settings</string>
    <string name="main_donate_title">Donate</string>
    <string name="main_donate_dialog_title">Donate to the Devs</string>
    <string name="main_donate_text">
        For a premium M:TG app like this, how much would you pay? $1,000? $10,000?&lt;br />&lt;br />
        Well, if you\'re reading this, you already know we\'re giving it away for free!&lt;br />&lt;br />
        Coding is hard work though, and us devs appreciate the extra dollar here or there.&lt;br />&lt;br />
        We\'ve got a drafting habit to fuel, OK?&lt;br />&lt;br />
        You can click the button below to donate via PayPal. $1 is cool. $5 is cooler. You get the drift.&lt;br />&lt;br />
        So, how generous are you feeling today?
    </string>
    <string name="main_whats_new_title">What\'s New</string>
    <string name="main_whats_new_in_title">What\'s New in Version</string>
    <string name="main_whats_new_text">
	- Improved Sliding Menu navigation&lt;br />&lt;br />
 	- More efficient price lookups&lt;br />&lt;br />
 	- Trader saves custom prices&lt;br />&lt;br />
 	- Many small bug fixes&lt;br />&lt;br />
 	- Better error handling
    </string>
    <string name="main_tts_warning_title">Text-to-Speech</string>
    <string name="main_tts_warning_text">This application has text-to-speech capability for some of its features, but you don\'t seem to have it installed. 
        If you want to install it, use the "Install Text-to-Speech" link in the settings menu.</string>
    <string name="main_export_data_title">Export Data to SD</string>
    <string name="main_export_success">Successfully exported data to </string>
    <string name="main_export_fail">Failed to export data to SD card</string>
    <string name="main_import_data_title">Import Data from SD</string>
    <string name="main_import_success">Import succeeded</string>
    <string name="main_import_fail">Import failed. Please put MTGFamiliarBackup.zip in the root of your SD card</string>
    <string name="main_about">About</string>
    <string name="main_about_title">About App</string>
    <string name="main_about_text">This app is my gift to the MTG community.&lt;br />&lt;br />
		Please send questions, comments, concerns, and praise to &lt;a href="mailto:mtg.familiar@gmail.com">mtg.familiar@gmail.com&lt;/a>.&lt;br />&lt;br />
		Join the &lt;a href="http://code.google.com/p/mtg-familiar">open source project&lt;/a> on Google Code.&lt;br />&lt;br />
		Thanks to zagaberoo for beautiful graphics and even more beautiful code.&lt;br />&lt;br />
		Thanks to April King for the massive QA effort, and learning Java. Shh, don\'t tell anyone about that.&lt;br />&lt;br />
		Thanks to Toastdeib for being my SQL guru sitting on top of the mountain.&lt;br />&lt;br />
		Thanks to Reuben for being the best kind of user. You know, the kind that becomes a developer!&lt;br />&lt;br />
		Thanks to Lotier from Reddit for coming out of nowhere with a great card trader activity!&lt;br />&lt;br />
		Thanks to Daniel for first learning Android, then making a wishlist!&lt;br />&lt;br />
		Thanks to Aethys for his French Translation and his API for searching a card name using the device camera.&lt;br />&lt;br />
		Thanks to chaudakh for the wonderful &lt;a href="http://forums.mtgsalvation.com/showthread.php?t=303454">Gatherer Extractor&lt;/a> program.&lt;br />&lt;br />
		Thanks to reddit\'s &lt;a href="http://www.reddit.com/r/magicTCG/">/r/magictcg&lt;/a> for testing and feedback.&lt;br />&lt;br />
		Thanks to my brother for the icon.&lt;br />&lt;br />
		Thanks to Chedy @ &lt;a href="http://tcgplayer.com">TCGPlayer.com&lt;/a> for the price API.&lt;br />&lt;br />
		Special thanks to Richard Garfield and the rest of the folks at &lt;a href="http://www.wizards.com/magic">Wizards of the Coast&lt;/a>.&lt;br />&lt;br />
		-gelakinetic&lt;br />&lt;br />&lt;br />
		Magic the Gathering and Magic the Gathering cards are ™ &amp; © Wizards of the Coast LLC.&lt;br />&lt;br />
		The Android robot is © Google &lt;br />&lt;br />
		&lt;a href="http://actionbarsherlock.com/index.html">ActionBarSherlock&lt;/a> used under the Apache License, Version 2.0&lt;/a>.&lt;br />&lt;br />
		&lt;a href="https://github.com/octo-online/robospice">Robospice&lt;/a> used under the Apache License, Version 2.0&lt;/a>.&lt;br />&lt;br />
		&lt;a href="https://github.com/jfeinstein10/SlidingMenu">SlidingMenu&lt;/a> used under the Apache License, Version 2.0&lt;/a>.&lt;br />&lt;br />
		Program licenced under the &lt;a href="http://www.gnu.org/licenses/gpl.html">GNU General Public License v3+&lt;/a>.&lt;br />&lt;br />
		Media licenced under the &lt;a href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License&lt;a>.
	</string>
    <string name="search_name">Name</string>
    <string name="search_supertype">Supertype</string>
    <string name="search_subtype">Subtype</string>
    <string name="search_text">Text</string>
    <string name="search_power">Power</string>
    <string name="search_toughness">Toughness</string>
    <string name="search_cmc">CMC</string>
    <string name="search_set">Set</string>
    <string name="search_sets">Sets</string>
    <string name="search_format">Format</string>
    <string name="search_formats">Formats</string>
    <string name="search_rarity">Rarity</string>
    <string name="search_rarities">Rarities</string>
    <string name="search_flavor_text">Flavor Text</string>
    <string name="search_artist">Artist</string>
    <string name="search_search">Search!</string>
    <string name="search_randomize">Randomize!</string>
    <string name="search_clear_fields">Clear Fields</string>
    <string name="search_save_defaults">Save Defaults</string>
    <string name="search_load_defaults">Load Defaults</string>
    <string name="search_toast_no_results">No search results found.</string>
    <string name="search_toast_cannot_save">Could not save search options.</string>
    <string name="search_toast_cannot_load">Could not load search options.</string>
    <string name="card_view_transform">Transform</string>
    <string name="card_view_left">&lt;</string>
    <string name="card_view_right">></string>
    <string name="card_view_copy">Copy Section To Clipboard</string>
    <string name="card_view_copy_all">Copy Card To Clipboard</string>
    <string name="card_view_image">Card Image</string>
    <string name="card_view_price">Card Price</string>
    <string name="card_view_change_set">Change Set</string>
    <string name="card_view_legality">Legality</string>
    <string name="card_view_rulings">Card Rulings</string>
    <string name="card_view_wishlist">Wishlist</string>
    <string name="card_view_legal">Legal</string>
    <string name="card_view_restricted">Restricted</string>
    <string name="card_view_banned">Banned</string>
    <string name="card_view_error">Error</string>
    <string name="card_view_price_dialog_title">TCGPlayer.com Prices</string>
    <string name="card_view_price_dialog_low">Low:</string>
    <string name="card_view_price_dialog_medium">Average:</string>
    <string name="card_view_price_dialog_high">High:</string>
    <string name="card_view_price_dialog_link">Click here for all prices and trend info</string>
    <string name="card_view_rulings_dialog_title">Card Rulings</string>
    <string name="card_view_no_rulings">No rulings for this card</string>
    <string name="card_view_gatherer_page">Gatherer Page</string>
    <string name="card_view_set_dialog_title">Pick a Set</string>
    <string name="card_view_loading_dialog">Loading. Please wait…</string>
    <string name="card_view_price_not_found">Price not found.</string>
    <string name="life_counter_twenty">20</string>
    <string name="life_counter_plus_one">+1</string>
    <string name="life_counter_plus_five">+5</string>
    <string name="life_counter_minus_one">-1</string>
    <string name="life_counter_minus_five">-5</string>
    <string name="life_counter_announce_life">Announce Life Totals</string>
    <string name="life_counter_change_default_gathering">Edit Gatherings</string>
    <string name="life_counter_set_gathering">Set Current Gathering</string>
    <string name="life_counter_change_display">Change Display Mode</string>
    <string name="life_counter_remove_player">Remove a Player</string>
    <string name="life_counter_add_player">Add a Player</string>
    <string name="life_counter_gathering_dialog_title">Load a Gathering</string>
    <string name="life_counter_clear_dialog_text">Clear life totals or players?\nMana pool will also be cleared.</string>
    <string name="life_counter_edit_name_dialog_title">Enter Name</string>
	<string name="life_counter_tts_has"> has </string>
	<string name="life_counter_tts_life">life</string>
    <string name="mana_pool_zero">0</string>
   	<string name="trader_default_price">$0.00</string>
    <string name="wishlist_name">Name</string>
    <string name="wishlist_add_card">Add</string>
</resources>