<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2011 Adam Feinstein and April King.

This file is part of MTG Familiar.

MTG Familiar is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

MTG Familiar is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with MTG Familiar.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/search_menu_random_search"
        android:icon="@drawable/menu_random"
        android:title="@string/search_randomize"></item>

    <item
        android:id="@+id/search_menu_search"
        android:icon="@drawable/menu_search"
        android:title="@string/search_search"/>

    <!--         android:icon="@android:drawable/ic_menu_clear_playlist" -->
    <item
        android:id="@+id/search_menu_clear"
        android:icon="@drawable/menu_cancel"
        android:title="@string/search_clear_fields"/>

</menu>
