<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/numberInput"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="2"
            android:selectAllOnFocus="true" >
        </EditText>

        <AutoCompleteTextView
            android:id="@+id/namesearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/wishlist_name" >

            <requestFocus />
        </AutoCompleteTextView>

        <Button
            android:id="@+id/addCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wishlist_add_card" />

        <ImageButton
            android:id="@+id/cameraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_camera" />
    </LinearLayout>

    <TextView
        android:id="@+id/priceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/trader_default_price"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ExpandableListView
        android:id="@+id/wishlist"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>