<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2011 Adam Feinstein This file is part of MTG Familiar. MTG 
	Familiar is free software: you can redistribute it and/or modify it under 
	the terms of the GNU General Public License as published by the Free Software 
	Foundation, either version 3 of the License, or (at your option) any later 
	version. MTG Familiar is distributed in the hope that it will be useful, 
	but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY 
	or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for 
	more details. You should have received a copy of the GNU General Public License 
	along with MTG Familiar. If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <AutoCompleteTextView
                    android:id="@+id/namesearch"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="@string/search_name"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:singleLine="true" >

    	            <requestFocus />
	            </AutoCompleteTextView>

                <ImageButton
                    android:id="@+id/cameraButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_camera" />

            </LinearLayout>

            <!-- Modified version below by Reuben Kriegel -->

            <LinearLayout
                android:id="@+id/linearLayout12"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <!-- EditText below by Adam Feinstein -->

                <AutoCompleteTextView
                    android:id="@+id/supertypesearch"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="@string/search_supertype"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/subtypesearch"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="@string/search_subtype"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:singleLine="true" />

                <!-- Spinner below by Reuben Kriegel -->

            </LinearLayout>

            <Spinner
                android:id="@+id/typelogic"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:imeOptions="actionSearch" />

            <!-- EditText below by Adam Feinstein -->

            <EditText
                android:id="@+id/textsearch"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/search_text"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:singleLine="true" />

            <!-- Spinner below by Reuben Kriegel -->

            <Spinner
                android:id="@+id/textlogic"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:imeOptions="actionSearch" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dip"
                android:layout_marginTop="3dip"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/linearLayout5"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center" >

                    <CheckBox
                        android:id="@+id/checkBoxW"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@xml/wcheck_selector" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout6"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal" >

                    <CheckBox
                        android:id="@+id/checkBoxU"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@xml/ucheck_selector" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout7"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal" >

                    <CheckBox
                        android:id="@+id/checkBoxB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@xml/bcheck_selector" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout8"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal" >

                    <CheckBox
                        android:id="@+id/checkBoxR"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@xml/rcheck_selector" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout9"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal" >

                    <CheckBox
                        android:id="@+id/checkBoxG"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@xml/gcheck_selector" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout10"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal" >

                    <CheckBox
                        android:id="@+id/checkBoxL"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@xml/xcheck_selector" />
                </LinearLayout>
            </LinearLayout>

            <Spinner
                android:id="@+id/colorlogic"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/textView1"
                    style="@style/text"
                    android:layout_width="125dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/search_power" />

                <Spinner
                    android:id="@+id/powLogic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/powChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/textView2"
                    style="@style/text"
                    android:layout_width="125dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/search_toughness" />

                <Spinner
                    android:id="@+id/touLogic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/touChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/textView3"
                    style="@style/text"
                    android:layout_width="125dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/search_cmc" />

                <Spinner
                    android:id="@+id/cmcLogic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/cmcChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout11"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3" >

                <Button
                    android:id="@+id/setsearch"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/search_set"
                    android:textSize="18dp" />

                <Button
                    android:id="@+id/formatsearch"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/search_format"
                    android:textSize="18dp" />

                <Button
                    android:id="@+id/raritysearch"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/search_rarity"
                    android:textSize="18dp" />
            </LinearLayout>

            <Spinner
                android:id="@+id/setlogic"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" />
            
            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <EditText
                    android:id="@+id/flavorsearch"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/search_flavor_text"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/artistsearch"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/search_artist"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:maxLines="1" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/searchbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/search_search"
        android:textSize="18dp" />

</LinearLayout>