<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp" android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@xml/textview_backdrop"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Commander Damage"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/commander_dialog_current_cDamage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@xml/textview_backdrop"
                android:gravity="bottom|center"
                android:text="@string/mana_pool_zero"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@xml/textview_backdrop"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Change"
                android:textAppearance="?android:attr/textAppearanceLarge" />

<TextView
    android:id="@+id/commander_dialog_delta"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@xml/textview_backdrop"
    android:gravity="center"
    android:text="@string/mana_pool_zero"
    android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

    </LinearLayout>

    <CheckBox
        android:id="@+id/commander_dialog_poison"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="Poison" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/commander_minus1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/life_counter_minus_one"
            android:textSize="20sp" />

        <Button
            android:id="@+id/commander_plus1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/life_counter_plus_one"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>